--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,7 @@ var host = window.location.host;
 var context = canvas.getContext("2d");
 var W = canvas.width  = window.innerWidth-6;
 var H = canvas.height = window.innerHeight-50;
+var id = "L"+Math.floor(20000000*Math.random());
 
 
 function getJSON(url){
@@ -266,22 +267,26 @@ mouse.mousedraggers.push(function(x,y,clicked,e) {
                           'radius':10});
 });
 
+function register(id){
+    postJSON("../listener/" + id, {});
+}
+register(id);
 
 function update() {
-    getJSON("../world").then((json) => {
-	//console.log(json);
+    getJSON("../listener/" + id).then((json) => {
 	for (var key in json) {
-	world[key] = json[key];
-	console.log(world);
+	    world[key] = json[key];
+	    //drawNextFrame();
 	}
-	});
+    });
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+    drawNextFrame();
     drawFrame();
 }
 
 // 30 frames per second
-//setInterval( update, 1000/30.0);
-setInterval( update, 1000);
+setInterval( update, 1000/30.0);
+//setInterval( update, 1000);
 
 
     </script>
